--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
 </head>
 
 <body>
+  <div style="position:fixed;bottom:10px;right:10px;background:#fff;color:#000;padding:8px 10px;border-radius:10px;z-index:99999;font:14px system-ui;">
+  TEST UPDATE
+</div>
+
   <!-- INTRO OVERLAY -->
 <div id="intro">
   <div class="intro-bg"></div>
@@ -361,4 +365,5 @@
 
 </body>
 </html>
+
 
