--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="description" content="Bres in Antwerpen. Casual gemixte keuken. Contact, openingsuren en locatie." />
   <meta name="theme-color" content="#0b0b0b" />
   <style>
+    /* Verberg site tot intro klaar is */
+body.intro-active main,
+body.intro-active header,
+body.intro-active footer {
+  visibility: hidden;
+}
+
     :root{
       --bg:#0b0b0b;
       --card:#111;
@@ -365,5 +372,6 @@
 
 </body>
 </html>
+
 
 
