--- a/index.html
+++ b/index.html
@@ -226,9 +226,7 @@ body.intro-active footer {
 <div id="intro">
   <div class="intro-bg"></div>
   <div class="intro-overlay"></div>
-  <div class="intro-logo">
-    <span>BRES</span>
-  </div>
+ <div class="intro-logo"></div>
 </div>
 
   <header>
@@ -371,6 +369,7 @@ body.intro-active footer {
 
 </body>
 </html>
+
 
 
 
