--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ body.intro-active footer {
 <header>
   <nav class="nav-center">
     <a class="brand" href="#">
-      <img src="images/logo.svg" alt="Bres logo" class="nav-logo">
+      <img src="images/logo.png" alt="Bres logo" class="nav-logo">
     </a>
   </nav>
 </header>
@@ -294,6 +294,7 @@ body.intro-active footer {
 
 </body>
 </html>
+
 
 
 
