--- a/index.html
+++ b/index.html
@@ -14,23 +14,20 @@ body.intro-active footer {
   visibility: hidden;
 }
     :root{
-      --bg:#0b0b0b;
-      --card:#111;
-      --text:#f5f5f5;
-      --muted:#b9b9b9;
-      --line:rgba(255,255,255,.12);
-      --max:1100px;
-      --pad:18px;
-      --r:18px;
+  --bg:#ffffff;
+  --card:#ffffff;
+  --text:#111111;
+  --muted:#666666;
+  --line:rgba(0,0,0,.12);
+}
+
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background:radial-gradient(1200px 700px at 20% -10%, rgba(255,255,255,.10), transparent 55%),
-                 radial-gradient(900px 600px at 90% 10%, rgba(255,255,255,.07), transparent 55%),
-                 var(--bg);
+      background: var(--bg);
       color:var(--text);
       line-height:1.55;
     }
@@ -38,7 +35,7 @@ body.intro-active footer {
     header{
       position:sticky; top:0; z-index:50;
       backdrop-filter: blur(10px);
-      background:rgba(11,11,11,.7);
+      background:#ffffff;
       border-bottom:1px solid var(--line);
     }
 /* Header met gecentreerd logo */
@@ -294,6 +291,7 @@ body.intro-active footer {
 
 </body>
 </html>
+
 
 
 
