--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8" />
+  <script>
+  document.documentElement.classList.add("intro-active");
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bres Antwerpen — Casual gemixte keuken</title>
   <meta name="description" content="Bres in Antwerpen. Casual gemixte keuken. Contact, openingsuren en locatie." />
   <meta name="theme-color" content="#0b0b0b" />
   <style>
     /* Verberg site tot intro klaar is */
-body.intro-active main,
-body.intro-active header,
-body.intro-active footer {
-  visibility: hidden;
+html.intro-active main,
+html.intro-active header,
+html.intro-active footer {
+    opacity: 0;
+  pointer-events: none;
 }
     :root{
   --bg:#ffffff;
@@ -164,6 +168,9 @@ body.intro-active footer {
   position:fixed;
   inset:0;
   z-index:9999;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.8s ease, visibility 0s linear 0.8s;
   overflow:hidden;
 }
 
@@ -209,7 +216,9 @@ body.intro-active footer {
 }
 
 #intro.hide{
-  animation:introFadeOut 1.2s ease forwards;
+    opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 @keyframes introFadeOut{
@@ -228,14 +237,14 @@ body.intro-active footer {
   display:block;
 }
 /* Verberg header tijdens intro */
-body.intro-active header{
+html.intro-active header{
   opacity:0;
   pointer-events:none;
 }
 
-/* Zorg dat header netjes in fade-in't */
-header{
-  transition: opacity 0.5s ease;
+/* Zachte fade-in na intro */
+header, main, footer {
+  transition: opacity 0.6s ease;
 }
 /* Layout voor voorpagina info */
 .container{
@@ -467,8 +476,20 @@ header{
     }, 2000);
   });
 </script>
+<script>
+  window.addEventListener("load", () => {
+    const intro = document.getElementById("intro");
+    if (!intro) return;
+
+    setTimeout(() => {
+      intro.classList.add("hide");
+      document.documentElement.classList.remove("intro-active");
+    }, 2000);
+  });
+</script>
 </body>
 </html>
+
 
 
 
