--- a/index.html
+++ b/index.html
@@ -369,6 +369,51 @@ header, main, footer {
   visibility: hidden;
   pointer-events: none;
 }
+/* Gecentreerde voorpagina zonder randjes */
+.container.center{
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 48px 18px 72px;
+  text-align: center;
+}
+
+.stack{
+  display: grid;
+  gap: 40px;
+}
+
+.block{
+  padding: 0;        /* geen kaart/rand */
+  background: none; /* geen achtergrond */
+  border: none;     /* geen randjes */
+}
+
+.center-hours{
+  margin: 0 auto;
+  max-width: 420px;
+}
+
+.hours .row{
+  display: grid;
+  grid-template-columns: 48px 1fr;
+  gap: 12px;
+  padding: 8px 0;
+  border-bottom: none; /* geen streepjes */
+  color: #111;
+}
+
+.center-kv{
+  margin: 12px auto 0;
+  max-width: 420px;
+  display: grid;
+  grid-template-columns: 110px 1fr;
+  gap: 10px 14px;
+  text-align: left; /* labels links, waarden rechts */
+}
+
+.center-actions{
+  justify-content: center;
+}
 
   </style>
 </head>
@@ -393,32 +438,13 @@ header, main, footer {
   </nav>
 </header>
 
-
-  <main id="top">
-  <section class="container">
-    <div class="info-grid">
-      <div class="info-card">
-        <h1 class="page-title">Bres</h1>
-        <p class="page-subtitle">Casual gemixte keuken — Antwerpen</p>
-
-        <div class="divider"></div>
-
-        <h2>Contact</h2>
-        <div class="kv">
-          <div>Telefoon</div><div><a href="tel:+32XXXXXXXXX">+32 …</a></div>
-          <div>E-mail</div><div><a href="mailto:info@restaurantbres.be">info@restaurantbres.be</a></div>
-          <div>Adres</div><div>Straat + nr, 2000 Antwerpen</div>
-        </div>
-
-        <div class="actions">
-          <a class="btn" target="_blank" rel="noopener" href="https://www.google.com/maps">Open in Google Maps</a>
-          <a class="btn" href="mailto:info@restaurantbres.be?subject=Contact%20via%20website%20—%20Bres">Mail ons</a>
-        </div>
-      </div>
-
-      <div class="info-card">
-        <h2>Openingsuren</h2>
-        <div class="hours">
+<main>
+<main id="top">
+  <section class="container center">
+    <div class="stack">
+      <div class="block">
+        <h1 class="page-title">Openingsuren</h1>
+        <div class="hours center-hours">
           <div class="row"><div>Ma</div><div>Gesloten</div></div>
           <div class="row"><div>Di</div><div>12:00–14:30 · 18:00–22:00</div></div>
           <div class="row"><div>Wo</div><div>12:00–14:30 · 18:00–22:00</div></div>
@@ -427,8 +453,19 @@ header, main, footer {
           <div class="row"><div>Za</div><div>18:00–23:00</div></div>
           <div class="row"><div>Zo</div><div>12:00–14:30 · 18:00–22:00</div></div>
         </div>
+      </div>
 
-        <p class="note">Keuken sluit 30 min voor sluitingstijd. (Pas dit aan als je wil.)</p>
+      <div class="block">
+        <h1 class="page-title">Contact</h1>
+        <div class="kv center-kv">
+          <div>Telefoon</div><div><a href="tel:+32XXXXXXXXX">+32 …</a></div>
+          <div>E-mail</div><div><a href="mailto:info@restaurantbres.be">info@restaurantbres.be</a></div>
+          <div>Adres</div><div>Straat + nr, 2000 Antwerpen</div>
+        </div>
+
+        <div class="actions center-actions">
+          <a class="btn" target="_blank" rel="noopener" href="https://www.google.com/maps">Open in Google Maps</a>
+        </div>
       </div>
     </div>
   </section>
@@ -489,6 +526,7 @@ header, main, footer {
 </script>
 </body>
 </html>
+
 
 
 
