--- a/index.html
+++ b/index.html
@@ -451,6 +451,13 @@ header, main, footer{
     opacity: .10; /* nog subtieler op mobiel */
   }
 }
+/* Bakstenen SVG als subtiele achtergrond */
+body{
+  background-image: url("images/bricks.svg");
+  background-repeat: repeat;
+  background-size: 220px auto;  /* grootte van de bakstenen */
+  background-color: #ffffff;    /* wit eronder */
+}
 
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -567,6 +574,7 @@ header, main, footer{
 </script>
 </body>
 </html>
+
 
 
 
