--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@ html.intro-active footer {
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
     body{
-      margin:0;
-      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background: var(--bg);
-      color:var(--text);
-      line-height:1.55;
-    }
-    a{color:inherit}
-    header{
-      position:sticky; top:0; z-index:50;
-      backdrop-filter: blur(10px);
-      background:#ffffff;
-      border-bottom:1px solid var(--line);
+    :root{
+  --font-body: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+}
+
+body{
+  font-family: var(--font-body);
+}
+
     }
 /* Header met gecentreerd logo */
 .nav-center {
@@ -462,7 +458,6 @@ body{
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
 </head>
 
@@ -574,6 +569,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
