--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@ html.intro-active footer {
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
-    body{
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+   body{
+  font-family: "Copperplate", "Copperplate Gothic Light", "Trajan Pro", "Didot", Georgia, serif;
+  letter-spacing: 0.04em;   /* Copperplate oogt mooier met iets meer spacing */
 }
 
     }
@@ -163,10 +164,8 @@ body{
   font-family: var(--font-body);
 }
 
-/* Alleen headings in brush-stijl */
-h1, h2, .page-title{
-  font-family: var(--font-brush);
-  letter-spacing: 0.5px;
+h1, .page-title{
+  letter-spacing: 0.08em;
 }
 
     /* INTRO OVERLAY */
@@ -522,18 +521,14 @@ body{
           <p><strong>Geopend van woensdag tot zaterdag.</strong></p>
 
           <p>
-            <strong>Avond:</strong> woensdag t.e.m. zaterdag<br>
-            19:00 – 22:00
-          </p>
-
-          <p>
             <strong>Lunch:</strong> woensdag t.e.m. vrijdag<br>
             12:00 – 14:30
           </p>
 
-          <p><em>Lunch elke dag behalve zaterdag.</em></p>
-        </div>
-      </div>
+          <p>
+            <strong>Avond:</strong> woensdag t.e.m. zaterdag<br>
+            19:00 – 22:00
+          </p>
 
       <div>
         <h1 class="page-title">Contact</h1>
@@ -605,6 +600,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
