--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ body{
         <h1 class="page-title">Openingsuren</h1>
 
         <div class="hours-text">
-          <p><strong>Geopend van woensdag tot zaterdag.</strong></p>
+          <p><strong>Geopend van woensdag tot zaterdag</strong></p>
 
           <p>
             <strong>Lunch:</strong> woensdag t.e.m. vrijdag<br>
@@ -536,7 +536,7 @@ body{
         <div class="contact-text">
           <p>Bresstraat 10, Antwerpen</p>
           <p><a href="mailto:info@restaurantbres.be">info@restaurantbres.be</a></p>
-          <p><a href="tel:+3233229791">+32 3 322 97 91</a></p>
+          <p><a href="tel:+32465093915">+32 465 09 39 15</a></p>
         </div>
       </div>
 
@@ -600,6 +600,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
