--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   document.documentElement.classList.add("intro-active");
 </script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bres Antwerpen — Casual gemixte keuken</title>
-  <meta name="description" content="Bres in Antwerpen. Casual gemixte keuken. Contact, openingsuren en locatie." />
+  <title>restaurant Bres</title>
+  <meta name="description" content="restaurant Bres te Antwerpen. Contact, openingsuren en locatie." />
   <meta name="theme-color" content="#0b0b0b" />
   <style>
     /* Verberg site tot intro klaar is */
@@ -384,8 +384,15 @@ header, main, footer {
 
 .stack{
   display: grid;
-  gap: 40px;
+  gap: 64px;
 }
+.divider{
+  width: 120px;
+  height: 1px;
+  margin: 26px auto;
+  background: rgba(0,0,0,.15);
+}
+
 
 .block{
   padding: 0;        /* geen kaart/rand */
@@ -528,7 +535,10 @@ body{
           <p>
             <strong>Avond:</strong> woensdag t.e.m. zaterdag<br>
             19:00 – 22:00
+        
           </p>
+          <div class="divider"></div>
+
 
       <div>
         <h1 class="page-title">Contact</h1>
@@ -600,6 +610,7 @@ body{
 </script>
 </body>
 </html>
+
 
 
 
